--- a/calculator.css
+++ b/calculator.css
@@ -1,6 +1,5 @@
 body {
-    width: 100vw;
-    height: 100vh;
+   
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -8,39 +7,26 @@ body {
     font-family: sans-serif;
   }
 button{
-    width: 80 !important;
-    height: 40 !important;
-    margin:3px;
-    margin-top: 7px;
+  width:100%;
+  height:4%;
   color:black;
   background-color:lightgray;
   border: none;
   border-radius: 5px;
-  font-size: large;
-}
-button:hover {
-    background-color: #666;
-    color: white;
-  }
-#button{
-    border: none;
+  font-size: auto;
+  margin: 4px;
   
-
-    
 }
 
-button:focus{
-    background-color: rgb(0, 68, 255);
-    color: white;
-}
 #outer
 {
     padding-top: 15px;
     padding-bottom: 15px;
     border: solid black 2px;
-    width:34%;
+    width:35%;
     text-align: center;
     border-radius: 10px;
+    padding: 10px;
   
 }
 #display{
@@ -48,11 +34,12 @@ button:focus{
     height:8%; 
     border: solid royalblue 1px;
     border-radius: 20px;
-    margin-bottom: 5px;
-    padding-left: 20px;
+ margin-bottom: 5px;
     font-size: xx-large;
+    padding-left: 3%;
 }
 .inner
 {  
+    width:12%;
     display: inline-block;
 }
