--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ button:hover{
     text-align: center;
     border-radius: 10px;
     padding: 10px;
-    background-color: rgb(148, 210, 230);
+    background-color: seagreen;
     padding-bottom: 30px;
 }
 #display{
